also show the poster on small devices

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 						</div>
 						<div class="columns small-1"><span data-tooltip class="has-tip addToSelection button tiny radius" title="Add to selection">+</span></div>
 					</div>
+
+					<img src="./poster.jpg" class="poster poster-small small-3 show-for-small-only">
+
 					<h4 class="tagline">Beyond darkness... beyond desolation... lies the greatest danger of all.</h4>
 					<p class="plot">
 						The Dwarves, Bilbo and Gandalf have successfully escaped the Misty Mountains, and Bilbo has gained the One Ring. They all continue their journey to get their gold back from the Dragon, Smaug.
