--- a/index.html
+++ b/index.html
@@ -62,22 +62,20 @@
 			<div class="row details">
 				<p class="hidden id"></p>
 				<div class="columns large-3 medium-2 show-for-medium-up">
-					<img src="./poster.jpg" class="poster">
+					<img src="" class="poster">
 				</div>
 				<div class="columns large-9 medium-10 small-12">
 					<div class="row">
 						<div class="columns small-11">
-							<h3><span class="title">The Hobbit: The Desolation of Smaug</span> <small class="year">2013</small></h3>
+							<h3><span class="title"></span> <small class="year"></small></h3>
 						</div>
 						<div class="columns small-1"><span data-tooltip class="has-tip addToSelection button tiny radius" title="Add to selection">+</span></div>
 					</div>
 
-					<img src="./poster.jpg" class="poster poster-small small-3 show-for-small-only">
+					<img src="" class="poster poster-small small-3 show-for-small-only">
 
-					<h4 class="tagline">Beyond darkness... beyond desolation... lies the greatest danger of all.</h4>
-					<p class="plot">
-						The Dwarves, Bilbo and Gandalf have successfully escaped the Misty Mountains, and Bilbo has gained the One Ring. They all continue their journey to get their gold back from the Dragon, Smaug.
-					</p>
+					<h4 class="tagline"></h4>
+					<p class="plot"></p>
 
 					<div class="row">
 						<div class="columns large-6 medium-6 small-6">
