added an option to navigate with the arrowkeys

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 					</tr>
 				</tfoot>
 			</table>
+			<div class="tip"><strong>Tip:</strong> Navigate with <kbd>&#65513;</kbd> and <kbd>&#65515;</kbd></div>
 
 			<h2>Details</h2>
 			<p class="clickToDetail">Click on a title to show its details.</p>
