fixed charset for dropbox-hosted movielists (dropbox sends a wrong encoding-header for HTML-files)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" >
 <head>
+  <meta name="utf8beacon" content="éçñøåá—" />
+  <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
@@ -110,13 +112,13 @@
 		</div>
 	</div>
 
-	<script src="./data.js"></script>
+	<script src="./data.js" type="text/javascript" charset="utf-8"></script>
 	<script src="./jquery-1.10.1.min.js"></script>
 	<script src="./jquery-ui.js"></script>
 	<script src="./foundation.min.js"></script>
 	<script>
     	$(document).foundation();
   	</script>
-	<script src="./beauty.js"></script>
+	<script src="./beauty.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
