--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 	<script src="./data.js" type="text/javascript" charset="utf-8"></script>
 	<script src="./jquery-1.10.1.min.js"></script>
 	<script src="./jquery-ui.js"></script>
+	<script src="./jquery.lazyload.min.js"></script>
 	<script src="./foundation.min.js"></script>
 	<script>
     	$(document).foundation();
