--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 			<table class="movies" width="100%">
 				<thead>
 					<tr>
-						<th>Title</th>
-						<th>Original title</th>
-						<th>Year</th>
-						<th>Rating</th>
+						<th data-sort="label">Title</th>
+						<th data-sort="originaltitle">Original title</th>
+						<th data-sort="year">Year</th>
+						<th data-sort="rating">Rating</th>
+						<th data-sort="dateadded" class="active">Added</th>
 						<th class="show-for-medium-up">Genre</th>
-						<th>Added</th>
 					</tr>
 				</thead>
 				<tbody>
